Adding git commands

--- a/02-04__08-04/02-04-2018.md
+++ b/02-04__08-04/02-04-2018.md
@@ -9,7 +9,7 @@ ___Intoduction
 ###  challenges
 
 ___Set up git on the computers
-   
+
 
 ###  achievements
 
@@ -20,7 +20,12 @@ ___
 ___ 
 
 ###  what you worked on
+Git commands:
 
+git clone enter-here-repository-url
+git add -A
+git commit -m "My custom message"
+git push
 ___
 
 ###  what you left unfinished
