Notes about gitbook error

--- a/02-04__08-04/02-04-2018.md
+++ b/02-04__08-04/02-04-2018.md
@@ -35,7 +35,13 @@ from scripts...
 
 6) JSON - data structure (Javascript Object Notation) - format przechowywania danych
 
+7) Error with being unable to start gitbook serve
 
+The issue was related to the gitbook error itself. 
+The solution was to downgrade the nodejs to version 6.12 (https://github.com/GitbookIO/gitbook/issues/1309) with gitbook version 2.6.7
+For gitbook version 3.2.3 solution is to modify a file in {User}/.gitbook however it didn't work out for me.
+
+To control versions for NodeJS in Windows, I have downloaded NVM, which is node version manager for Windows with super easy CLI.
 
 
 
